<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_round2"
        android:backgroundTint="@color/white"
        android:elevation="7dp"
        android:orientation="vertical"
        android:outlineProvider="background"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="276dp"
            android:layout_height="133dp"
            android:src="@drawable/logo2"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="example@mail.com"
            android:inputType="textPostalAddress"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp">

            <EditText
                android:autofillHints="password"
                android:fontFamily="@font/roboto"
                android:id="@+id/editPassword"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/imageShowPass"
                android:hint="********"
                android:inputType="textPassword"
                android:text="" />

            <ImageButton
                android:id="@+id/imageShowPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_round2"
                android:backgroundTint="@color/pink"
                android:paddingHorizontal="5dp"
                android:src="@drawable/ic_eye"
                app:tint="@color/white" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/enter" />

        <TextView
            android:onClick="onClickToReg"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_login"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>