<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:backgroundTint="@color/white"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_round2"
            android:elevation="7dp"
            android:orientation="vertical"
            android:outlineProvider="background"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/firstName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editFirstName"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Sigma Boy"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />
        </LinearLayout>

        <LinearLayout
            android:backgroundTint="@color/white"
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_round2"
            android:elevation="7dp"
            android:orientation="vertical"
            android:outlineProvider="background"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/adres"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editAdress"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Ул. Пригожина, д. 137, кв. 377"
                android:inputType="text"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />
        </LinearLayout>

        <LinearLayout
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_round2"
            android:elevation="7dp"
            android:orientation="vertical"
            android:outlineProvider="background"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/postalIndex"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editPostalIndex"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="593 953"
                android:inputType="textPostalAddress"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />
        </LinearLayout>

        <Button
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_send"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/save" />

    </RelativeLayout>

</FrameLayout>